--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 网页标题
-VITE_TITLE = "Yannick Young - 个人主页"
+VITE_TITLE = "GMLXH - 个人主页"
 # 网页关键词
 VITE_KEYWORDS = "一个基于Vue3的个人主页"
 # 网页描述
@@ -14,7 +14,7 @@ VITE_ICON_LIBRARY = "//lib.baomitu.com/font-awesome/6.5.0/css/all.min.css"
 VITE_FONT_LIBRARY = "https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css"
 
 # 网页内显示的名称 // 页脚也会同步显示
-VITE_APP_USER_NAME = "Yannick Young"
+VITE_APP_USER_NAME = "GMLXH"
 # 网页内显示的头像
 VITE_APP_PROFILE_IMAGE_URL = "/favicon.ico"
 
